--- a/ReactAspNetCoreIdentity.Server/ReactAspNetCoreIdentity.Server.csproj
+++ b/ReactAspNetCoreIdentity.Server/ReactAspNetCoreIdentity.Server.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="9.0.8" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
   </ItemGroup>
 
 </Project>
